# attention_superoptimizer

./: .gitmodules  CMakeLists.txt  INSTALL.md  README.md
baselines/flashattn/: gqa.py  gqa_prefill.py  gqa_spec.py  mha.py  mqa.py  mqa_prefill.py
baselines/pytorch/: gqa.py  lora.py  mha.py  mlp.py  mqa.py
baselines/tensorrt/: gqa.py  lora.py  mha.py  mlp.py
baselines/triton/: gqa.py  mha.py  mqa.py
cmake/: cuda.cmake
cpp_examples/: attention.cc  common.h  dnn.cc  example1.cc  example2.cc  example3.cc  from_checkpoint.cc  group_query_attn_inc_decode.cc  group_query_attn_prefill.cc  group_query_attn_spec_decode.cc  layout_optimize.cc  lora.cc  mlp.cc  moe.cc  multi_head_attn_inc_decode.cc  multi_head_attn_prefill.cc  multi_head_attn_spec_decode.cc  multi_query_attn_inc_decode.cc  multi_query_attn_prefill.cc  multi_query_attn_spec_decode.cc  profile.cc  search_test.cc
docker/: Dockerfile  install_mirage.sh
include/aso/: base_operator.h  data_type.h  layout.h  profile_result.h  simulator.h  tensor.h  type.h
include/aso/graph/: kernel_graph.h  operator_factory.h  thread_block_graph.h  warp_graph.h
include/aso/kernel/: .operator_factory.h.swp  customized.h  device_memory_manager.h  device_tensor.h  element_binary.h  element_unary.h  graph.h  matmul.h  operator.h  operator_factory.h  reduction.h
include/aso/search/: algebraic_pattern.h  config.h  dim_strategy.h  op_utils.h  order.h  search.h  search_c.h  tensor_utils.h
include/aso/threadblock/: concat.h  element_binary.h  element_unary.h  graph.h  matmul.h  operator.h  reduction.h  smem_tensor.h  softmax.h
include/aso/threadblock/cuda/: .reduction.h.swp  concat.h  element_binary.h  element_unary.h  input.h  input_loader.h  matmul.h  output.h  output_saver.h  reduction.h
include/aso/threadblock/serializer/: concat_serializer.h  element_binary_serializer.h  element_unary_serializer.h  input_loader_serializer.h  kernel_params.h  matmul_serializer.h  output_saver_serializer.h  reduction_serializer.h
include/aso/utils/: containers.h  cuda_helper.h  hash_utils.h  json_utils.h  static_switch.h
include/aso/warp/cuda/: matmul.h
include/mirage/: type.h
include/mirage/search/: config.h  dim_strategy.h  op_utils.h  search_c.h
include/mirage/threadblock/: graph.h
include/mirage/threadblock/cuda/: input_loader.h  matmul.h
include/mirage/threadblock/serializer/: kernel_params.h
include/mirage/utils/: containers.h
python/: setup.py
python/aso/_cython/: CCore.pxd  core.pyx
python/mirage/: __init__.py
python/mirage/_cython/: CCore.pxd  core.pyx
scripts/: draw_graph.py
src/: profile_result.cc
src/base/: data_type.cc  tensor.cc
src/graph/: .kernel_graph.cc.swp  kernel_graph.cc  operator_factory.cc
src/kernel/: .operator_factory.cu.swp  customized.cc  device_memory_manager.cu  device_tensor.cc  element_binary.cc  element_unary.cc  graph.cc  matmul.cc  operator.cc  operator_factory.cc  operator_factory.cu  reduction.cc  triton_code_gen.cc
src/kernel/cuda/: customized_kernel.cu  device_tensor_kernel.cu  element_binary_kernel.cu  element_unary_kernel.cu  input_kernel.cu  matmul_kernel.cu  reduction_kernel.cu
src/search/: algebraic_pattern.cc  config.cc  dim_strategy.cc  op_utils.cc  order.cc  search.cc  search_c.cc  tensor_utils.cc
src/simulator/: simulator.cu
src/threadblock/: concat.cc  element_binary.cc  element_unary.cc  graph.cc  input.cc  input_loader.cc  matmul.cc  operator.cc  output.cc  reduction.cc  smem_tensor.cc
src/threadblock/cuda/: element_unary.cu  input_executor.cu  matmul.cu
src/utils/: containers.cc  cuda_helper.cu  json_utils.cc
tests/: CMakeLists.txt
tests/search/: CMakeLists.txt  algebraic_expression.cc
tests/threadblock/: CMakeLists.txt  common.h  gemv.cu  input_output.cu  matmul.cu
